--- a/app/src/main/res/layout/activity_creat_account.xml
+++ b/app/src/main/res/layout/activity_creat_account.xml
@@ -29,14 +29,24 @@
                 android:layout_height="wrap_content" />
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:hint="Email address"
+                android:id="@+id/edEmail"
+                android:inputType="textEmailAddress"
                 android:layout_marginBottom="10dp"
-                android:id="@+id/edMobile"
-                android:hint="Conception Date"/>
+                android:layout_height="wrap_content" />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:inputType="number"
+                android:id="@+id/edMobile"
+                android:hint="Mobile No"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:editable="false"
+                android:clickable="true"
                 android:id="@+id/edConceptionDate"
                 android:hint="Conception Date"/>
             <EditText
