changed expandablelist header font and  bgcolor

--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="#000000">
+    android:background="@color/colorAccent">
 
 
     <TextView
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="17dp"
-        android:textColor="#f9f93d" />
+        android:textStyle="bold"
+        android:text="Stay Positive"
+        android:textColor="@color/color_white" />
 
 </LinearLayout>
