--- a/app/src/main/res/layout/reminder_list_row.xml
+++ b/app/src/main/res/layout/reminder_list_row.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:textColor="@color/title"
@@ -24,6 +24,7 @@
     <TextView
         android:id="@+id/tv_desc"
         android:layout_width="match_parent"
+        android:textSize="16dp"
         android:layout_height="wrap_content"
         android:hint="tlll ll kkkkakkak kkak"
         android:layout_below="@id/tv_title" />
